--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>GreenHarvest</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <main>
+      <load src="partials/your-diet-today.html" />
+      <load src="partials/how-it-works.html" />
+      <load src="partials/discount.html" />
+      <load src="partials/vegetables.html" />
+      <load src="partials/reviews.html" />
+      <load src="partials/your-order.html" />
+    </main>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <load src="partials/footer.html" />
   </body>
 </html>
