--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <load src="partials/header.html" />
 
     <main>
-      <load src="partials/your-diet-today.html" />
+      <load src="partials/hero.html" />
       <load src="partials/how-it-works.html" />
       <load src="partials/discount.html" />
       <load src="partials/vegetables.html" />
