--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,6 @@
       <load src="partials/your-order.html" />
     </main>
 
-    <load src="partials/footer.html" />
+    <load src="partials/foorer.html" />
   </body>
 </html>
